--- a/content/post/2024-10-02-week-5-turnout/index.Rmd
+++ b/content/post/2024-10-02-week-5-turnout/index.Rmd
@@ -138,7 +138,7 @@ ggplot(data = us_map, aes(x = long, y = lat, group = group, fill = factor(party)
   theme_minimal() +
   coord_fixed(1.3) +
   scale_fill_manual(values = c("Democrat" = "dodgerblue4", "Republican" = "firebrick1", "Toss Up" = "beige")) +
-  labs(title = "2024 Base Electoral College Map", x = "", y = "", caption = "Hawaii is blue \nAlaska is red \nNebraska 2nd district is blue \nMaine's 2nd district is red") +
+  labs(title = "2024 Base Electoral College Map", x = "", y = "", caption = "Hawaii is blue \nAlaska is red \nNebraska 2nd district is blue \nMaine's 2nd district is red", fill = "Party") +
   theme(
     panel.grid.major = element_blank(), 
     panel.grid.minor = element_blank(),
@@ -539,7 +539,7 @@ ggplot(data = us_map, aes(x = long, y = lat, group = group, fill = factor(party)
   theme_minimal() +
   coord_fixed(1.3) +
   scale_fill_manual(values = c("Democrat" = "dodgerblue4", "Republican" = "firebrick1", "Toss Up" = "beige")) +
-  labs(title = "2024 Base Electoral College Map", x = "", y = "", caption = "Hawaii is blue \nAlaska is red \nNebraska 2nd district is blue \nMaine's 2nd district is red") +
+  labs(title = "2024 Base Electoral College Map", x = "", y = "", caption = "Hawaii is blue \nAlaska is red \nNebraska 2nd district is blue \nMaine's 2nd district is red", fill = "Party") +
   theme(
     panel.grid.major = element_blank(), 
     panel.grid.minor = element_blank(),
