--- a/content/post/2024-10-02-week-5-turnout/index.Rmd
+++ b/content/post/2024-10-02-week-5-turnout/index.Rmd
@@ -127,7 +127,7 @@ us_map <- us_map %>%
 
 ```
 
-```{r, include = FALSE, warning = FALSE, message = FALSE, results = 'asis'}
+```{r, echo = FALSE, warning = FALSE, message = FALSE, results = 'asis'}
 
 # Plot Electoral College Map
 
