--- a/content/post/2024-10-26-week-8-penultimate-week/index.Rmd
+++ b/content/post/2024-10-26-week-8-penultimate-week/index.Rmd
@@ -400,7 +400,8 @@ ggplot(importance_long, aes(x = reorder(Feature, Importance), y = Importance, fi
   coord_flip() +
   labs(title = "Feature Importance for Republican and Democrat Models (Elastic Net)",
        x = "Features", y = "Absolute Coefficient (Feature Importance)") +
-  theme_minimal()
+    scale_fill_manual(values = c("Importance_D" = "dodgerblue4", "Importance_R" = "firebrick1")) +
+  theme_minimal() 
 
 ```
 
@@ -420,7 +421,7 @@ Here, we can see that Arizona, Georgia, and North Carolina are favored to vote r
 
 I will now use a simulation to get an estimate of how confident we are in these results. I will do this by sampling new state-level polling measurements for each of our 7 states 10,000 times, assuming a normal distribution around the current polling values with a standard deviation determined by the average distance of each state's poll away from the actual outcome.
 
-To create this standard deviation, I will take the average of the mean polling error of each state in 2016 and 2020 to capture the "Trump-era" polling error. 
+To create this standard deviation, I will take the average of the mean polling error of each state in 2016 and 2020 (weighted equally for both years) to capture the "Trump-era" polling error. 
 
 ```{r, echo = FALSE, warning = FALSE, message = FALSE, results = 'asis'}
 
