--- a/content/post/2024-10-30-week-9-final-prediction/index.Rmd
+++ b/content/post/2024-10-30-week-9-final-prediction/index.Rmd
@@ -179,13 +179,13 @@ ggplot(df_2024, aes(x = "", y = electoral_votes, fill = party)) +
 Using national-level polling average data since 1968 from [FiveThirtyEight](https://projects.fivethirtyeight.com/polls/), I will construct a model that uses the following polling features to predict the national two-party vote share.
 
 - Polling average for the Republican candidate within a state in each of the ten most recent weeks
-- Polling average for the Republican candidate within a state in each of the ten most recent weeks
+- Polling average for the Democratic candidate within a state in each of the ten most recent weeks
 
-I am opting to only consider the polling averages within the last ten weeks of the campaign rather than the entirety of the campaign as I believe these to be most predictive of the ultimate election outcome. I am concerned that introducing averages from earlier periods would lead to overfitting, and, considering the unique candidate swap of 2024, I do not believe Biden nor Harris's polling averages from the stage in the election before Harris could establish a proper campaign strategy are informative. These averages also occur after both parties have held their respective conventions and show the leanings of a more settled electorate. I will also be rescaling all polling averages so that the two-party vote share sums to 100.
+I am opting to only consider the polling averages within the last ten weeks of the campaign rather than the entirety of the campaign as I believe these to be most predictive of the ultimate election outcome. I am concerned that introducing averages from earlier periods would lead to overfitting, and, considering the unique candidate swap of 2024, I do not believe Biden nor Harris's polling averages from the stage in the election before Harris could establish a proper campaign strategy are informative. These averages also occur after both parties have held their respective conventions and show the leanings of a more settled electorate. I will also be rescaling all polling averages so that the two-party vote share sums to 100. After doing this, I will only use Democratic polls to create a model (which is possible because Republican two-party vote share is just 100 - Democratic two-party vote share).
 
 While there are a number of fundamental and economic covariates I considered exploring (whether a candidate is only a party incumbent, GDP growth in the second quarter of the election year, RDPI growth in the second quarter of the election year, unemployment rate in the second quarter of the election year, June approval rating, etc.), I found that my forecasts were highly variable depending on which fundamental variables I decided to include. It is my belief that many of the trends explained by fundamental variables (incumbency bias, high growth is good for candidates, high inflation is bad for candidates, etc.) is already baked into the polls, so I will focus on constructing a polls-only model.
 
-We will train separate two-party vote share models for both the Republicans and Democrats, and then apply this model to our 2024 data to generate predictions. 
+We will train a two-party vote share model for to predice Democratic vote share, and then apply this model to our 2024 data to generate predictions. 
 
 First, I want to assess whether modern national polls are systematically more accurate than older polls.
 
@@ -215,7 +215,7 @@ d_pollav <- d_pollav %>% mutate(
   pollav_weekDEM = pollav_weekDEM * (100 / (pollav_weekDEM + pollav_weekREP)),
   pollav_weekREP = 100 - pollav_weekDEM) %>% select(-pollav_weekREP)
 
-# Make 12 different columns 
+# Make 10 different columns 
 
 d_pollav <- d_pollav %>%
   pivot_wider(
@@ -264,10 +264,9 @@ d_train <- d_train %>% filter(year != 1968)
 
 ```
 
-Now, I want to find the optimal way to average my week by week polling averages into an overall estimate for the national two-party Democratic vote share. Intuitively, I can assume that more recent polls are more accurate than less recent polls. I can model the weight of each column (week 1 through 12) with a decay factor, alpha, that compounds exponentially each week further away from week 1 that I get. 
+Now, I want to find the optimal way to average my week by week polling averages into an overall estimate for the national two-party Democratic vote share. Intuitively, I can assume that more recent polls are more accurate than less recent polls. I can model the weight of each column (week 1 through 10) with a decay factor, alpha, that compounds exponentially each week further away from week 1 that I get. 
 
-$$weight_i =\alpha^{(i−1)}$$
-
+![Image 1](image_2.png)
 
 I will test all decay value within the set of {1, 0.99, 0.98,..., 0.51, 0.5}.
 
@@ -362,7 +361,12 @@ data.frame(
 
 ```
 
+The mean In-Sample RMSE is 1.410265.
+The mean Out-of-Sample squared error is 2.626053.
+
 ```{r, echo = FALSE, warning = FALSE, message = FALSE, results = 'asis'}
+
+# I used ChatGPT to get this table
 
 # Define a data frame to store in-sample and out-of-sample errors for each fold
 errors <- data.frame(Fold = integer(), In_Sample_RMSE = numeric(), Out_of_Sample_SE = numeric())
@@ -417,9 +421,6 @@ errors %>%
 
 ```
 
-The mean In-Sample RMSE is 1.410265.
-The mean Out-of-Sample squared error is 2.626053.
-
 This model yields the following Harris-Trump national popular vote prediction.
 
 ```{r, echo = FALSE, warning = FALSE, message = FALSE, results = 'asis'}
@@ -439,11 +440,13 @@ data.frame(Year = 2024,
 
 # State-level estimates
 
-I will now use this same decay factor to predict the two-party vote share for each of our battleground states. I chose to find this decay factor from national popular vote data because I have higher confidence in the consistent quality of national polls over time than the consistent quality of state polls over time, especially acorss states. It also seems like a reasonable assumption to me that this decay factor would remain largely constant over time. 
+I will now use this same decay factor to predict the two-party vote share for each of our battleground states. I chose to find this decay factor from national popular vote data because I have higher confidence in the consistent quality of national polls over time than the consistent quality of state polls over time, especially across states. It also seems like a reasonable assumption to me that this decay factor would remain largely constant over time. 
 
 For the same reasons as those I have already mentioned, I want to make this model as simple as possible and will only be considering the polling averages in each of the 10 weeks leading up to the election for each of our battleground states. I will use these 10 polling averages to construct a weighted average for each state. The formula for our weighted average (and our model) is as follows:
 
-$$\text{Predicted Poll Value of a State} = \sum_{i=1}^{n} \left( \alpha^{(i-1)} \times \text{Poll Value}_i \right)$$
+![Image 2](image_1.png)
+
+The weighted average for the Democratic two-party vote share for each state in 2024 is displayed below:
 
 ```{r, include = FALSE, warning = FALSE, message = FALSE, results = 'asis'}
 
@@ -550,19 +553,21 @@ For comparison, let's see how our model would have fared for these same states i
 
 ```{r, echo = FALSE, warning = FALSE, message = FALSE, results = 'asis'}
 
-d_test <- d |> 
+d_trial <- d |> 
   filter(year == 2020 & state %in% states.2024) 
 
-d_test %>%
-  select(state, pred_D_pv2p) %>%
-  kable(col.names = c("State", "Predicted Democratic Two-Party Vote Share")) %>%
+d_trial %>%
+  select(state, pred_D_pv2p, D_pv2p) %>%
+  kable(col.names = c("State", "Predicted Democratic Two-Party Vote Share", "Actual pv2p")) %>%
   kable_styling("striped") %>%
-  row_spec(which(d_test$pred_D_pv2p <= 50), background = "firebrick1") %>%
-  row_spec(which(d_test$pred_D_pv2p >= 50), background = "dodgerblue4")
+  row_spec(which(d_trial$pred_D_pv2p <= 50), background = "firebrick1") %>%
+  row_spec(which(d_trial$pred_D_pv2p >= 50), background = "dodgerblue4")
+
+# d_trial %>% select(state, pred_D_pv2p, D_pv2p) %>% mutate(error = pred_D_pv2p - D_pv2p) %>% summarize(num = sqrt(mean(error^2)))
 
 ```
 
-All of our states would have voted blue, which was the case with the exception of North Carolina, which voted Republican.
+All of our states would have been projected to vote blue, which was the case with the exception of North Carolina, which voted Republican. This is an RMSE of 2.24 percentage points.
 
 ```{r, echo = FALSE, warning = FALSE, message = FALSE, results = 'asis'}
 
@@ -574,7 +579,7 @@ d_trial <- d %>% select(year, state, pred_D_pv2p, D_pv2p) %>% na.omit() %>% muta
 
 ```
 
-Across the 442 state elections in which we have polling averages for each of the ten weeks leading up to the election, our model correctly predicts the winner of the state 91.12% of the time with an RMSE of roughly 3.02 percentage points.
+Across the 442 state elections since 1968 in which we have polling averages for each of the ten weeks leading up to the election, our model correctly predicts the winner of the state 91.12% of the time with an RMSE of roughly 3.02 percentage points.
 
 I will now use a simulation to get an estimate of how confident we are in these results. I will do this by sampling new state-level polling measurements for each of our 7 states 10,000 times, assuming a normal distribution around the current polling values with a standard deviation determined by the average distance of each state's poll away from the actual outcome in the past two elections.
 
@@ -662,17 +667,25 @@ for (i in 1:nrow(d_test)) {
   simulation_results$pred_winner[((i - 1) * n_simulations + 1):(i * n_simulations)] <- ifelse(simulated_R >= simulated_D, "R", "D")
 }
 
-# Summarize results for Democrats
+# Summarize results for Democrats, including 2.5th and 97.5th percentiles
 democrat_summary <- simulation_results %>%
   group_by(state) %>%
-  summarise(D_win_percentage = mean(pred_winner == "D") * 100, .groups = 'drop')
+  summarise(
+    D_win_percentage = mean(pred_winner == "D") * 100,
+    D_2_5_percentile = quantile(predicted_D_pv2p, 0.025),
+    D_97_5_percentile = quantile(predicted_D_pv2p, 0.975),
+    .groups = 'drop'
+  )
 
-# Display the summary table
+# Display the summary table with added percentiles
 democrat_summary %>%
-  kable(col.names = c("State", "D Win Percentage")) %>%
+  kable(col.names = c("State", "D Win Percentage", "2.5th Percentile", "97.5th Percentile")) %>%
   kable_styling("striped") %>%
   row_spec(0, bold = TRUE)
+
 ```
+
+We also get the following distribution of simulations.
 
 ```{r, echo = FALSE, warning = FALSE, message = FALSE, results = 'asis'}
 
@@ -771,4 +784,4 @@ ggplot(df_2024, aes(x = "", y = electoral_votes, fill = party)) +
 
 # Data Sources: 
 
-Data are from the US presidential election popular vote results from 1948-2020, [state-level polling data for 1980 onwards](https://projects.fivethirtyeight.com/polls/), and economic data from the [St. Louis Fed](https://fred.stlouisfed.org/).
+Data are from the US presidential election popular vote results from 1948-2020 and [state-level polling data for 1968 onwards](https://projects.fivethirtyeight.com/polls/).
